[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse_benchmark"
version = "0.1.0"
description = "Reinforcement learning benchmark for warehouse navigation with Isaac Lab"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WarehouseBenchmark Team"}
]
keywords = ["reinforcement learning", "warehouse", "navigation", "isaac lab", "isaac sim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/WarehouseBenchmark"
Repository = "https://github.com/yourusername/WarehouseBenchmark"

[tool.black]
line-length = 120
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120
